# fmr.ai

./: .gitignore  README.md  pyproject.toml
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: main.tsx  sidebar.ts
client/src/api/: routes.ts  types.ts
client/src/components/: AppSidebar.tsx  AttentionHeadView.tsx  TopLevelOverview.tsx
client/src/dialogs/: ChooseDataset.tsx  NewAgent.tsx  NewProject.tsx
client/src/hooks/: current.ts
client/src/layouts/: MainLayout.tsx  ProjectLayout.tsx  TempLayout.tsx
client/src/pages/: AnalyzeAttention.tsx  AnalyzeText.tsx  AttentionClustering.tsx  AttentionHome.tsx  Home.tsx  KeyValueMemories.tsx  ModelHome.tsx  ProjectHome.tsx  Projects.tsx  ViewAttentionClustering.tsx  ViewComputationGraph.tsx  ViewModel.tsx  ViewTensor.tsx
client/src/pages/kv/: KVHome.tsx
client/src/state/: models.ts
examples/: computation_graph.ipynb  plot_attention_heads.ipynb
fmrai/: fmrai.py  instrument.py  logging.py  tracker.py
fmrai/agent/: __init__.py  api.py  app.py  logic.py
fmrai/agent/agents/: transformers.py
fmrai/analysis/: attention.py  common.py  ffn_kv.py  structure.py
fmrai/analysis/ffn_kv/: base.py  sqlite.py
fmrai/pasten/: simple_model.py
fmrai/test/: simple_model.py
mldbg/: bert.dot  gradients.py  instrument.py  test.dot
notebooks/: pasten.ipynb  test_attention.ipynb  test_dataset.ipynb  test_ffn_kv.ipynb  test_llama.ipynb  test_mldbg.ipynb  test_structure.ipynb
server/: agent_comm.py  app.py
server/adapters/: repository.py
server/domain/: project.py
server/entrypoints/web/: app.py  models.py
(+4 files in other folders)
