[tool.poetry]
name = "runtime"
version = "0.1.0"
description = ""
authors = ["Jacob Zhitomirsky <bizarrecake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydot = "^1.4.2"
tqdm = "^4.66.1"
fastapi = "^0.103.1"
bottle = "^0.12.25"
requests = "^2.31.0"
scikit-learn = "^1.3.0"
datasets = "^2.14.5"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.4.2"


[tool.poetry.group.server.dependencies]
fastapi = "^0.103.1"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
